# LuaSCF

./: CMakeLists.txt
lib_C/array/: Array.c  Array.h  ArrayType.h  Matrix.c  Matrix.h
lib_C/exblas/: exblas.c  exblas.h
lib_C/exmath/: exmath.c  exmath.h
lib_C/fftw/: interface_fftw.c  interface_fftw.h
lib_C/libcint/: interface_libcint.c  interface_libcint.h
lib_Lua/io/: basis.lua  xyz.lua
test/: Untitled.xyz  sto-3g.txt  test.c
